Bug 304094 - Moving users between groups using mouse drag is difficult as contact list does not scroll
Summary: Moving users between groups using mouse drag is difficult as contact list doe...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.4.0
Platform: Chakra Linux
: NOR normal
Target Milestone: 0.6-next
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-07-26 14:37 UTC by Venky
Modified: 2013-02-15 21:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments
I tried to make a pseudo code of how to proceed it .. (2.70 KB, patch)
2012-12-28 18:01 UTC, heena
Details
Tried to set the attribute DrapDrop (52.35 KB, patch)
2013-01-09 15:34 UTC, heena
Details
How is this? (27.74 KB, patch)
2013-01-09 16:30 UTC, heena
Details
tried to set the autoscroll property (28.15 KB, patch)
2013-01-13 15:39 UTC, heena
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Venky 2012-07-26 14:37:50 UTC
If i want to move a user from one group to other using mouse drag and the destination group is not visible in the contact list (because of a long contact list), the list does not scroll to aid the movement

Reproducible: Always

Steps to Reproduce:
1.click and drag a user from one group
2.try to find a destination group which is not visible (make your contact list window small so that you have to scroll
3.you will be stuck
Comment 1 David Edmundson 2012-08-31 15:34:28 UTC
Confirmed.

To fix see:
http://qt-project.org/doc/qt-4.8/qabstractitemview.html#autoScroll-prop

Marking as junior-job
Comment 2 heena 2012-12-28 18:01:11 UTC
Created attachment 76063 [details]
I tried to make a pseudo code of how to proceed it ..

It is just a pseudo code of how to use qabstractview and not the complete code.
Regards
Comment 3 Martin Klapetek 2012-12-28 18:23:17 UTC
Uhm...what did you do exactly?
Comment 4 Martin Klapetek 2013-01-04 10:42:57 UTC
I'm marking it for 0.6, if no junior developer takes it, I'll fix it before the release.
Comment 5 heena 2013-01-05 14:16:36 UTC
@Martin : Hey 1 :)  I just tried to put a few attributes which may be useful for the given bug .Could you explain further how to proceed on it ? 

Regards
Comment 6 Martin Klapetek 2013-01-05 14:28:27 UTC
Sure. As David pointed out in comment #1, you need to set the autoScroll property[1] on the list view, which is in contact-list-widget.cpp. In the constructor you will find lots of properties being set, so just add one more and you're done.

[1] - http://qt-project.org/doc/qt-4.8/qabstractitemview.html#autoScroll-prop
Comment 7 heena 2013-01-09 15:09:02 UTC
I found contact-list.c in kde-telepathy-glib but not contact-list-widget.cpp (in root) could you please specify its location?
Comment 8 Martin Klapetek 2013-01-09 15:11:53 UTC
It's in ktp-contact-list, found at http://quickgit.kde.org/?p=ktp-contact-list.git
Comment 9 heena 2013-01-09 15:34:59 UTC
Created attachment 76338 [details]
Tried to set the attribute DrapDrop

static void
example_contact_list_init (ExampleContactList *self)
{
  self->priv=QAbstractItemView::DragDrop;
  
  //QAbstractItemView::DragDrop;}
Comment 10 Martin Klapetek 2013-01-09 15:39:56 UTC
Does it even compile for you? ;)
Comment 11 heena 2013-01-09 16:30:49 UTC
Created attachment 76341 [details]
How is this?
Comment 12 heena 2013-01-09 16:33:21 UTC
@Martin I am just a beginner :-P
Comment 13 Martin Klapetek 2013-01-09 16:44:06 UTC
I know and that's perfectly fine. However I'd suggest you get more familiar with general developing first - like compiling things, understanding functions, return types, classes structures, testing your changes and so on. That will give you truly huge boost for fixing stuff in KDE.

As for your patch...well, getting closer, but still not there. Revert all you have done and just follow what is said in comment #6 :)
Comment 14 heena 2013-01-10 06:04:59 UTC
okay ..Thank you for your time :-) :D
Comment 15 heena 2013-01-13 15:39:16 UTC
Created attachment 76439 [details]
tried to set the autoscroll property
Comment 16 Rohan Garg 2013-01-13 15:55:58 UTC
Errr ...  Could you upload a diff to https://git.reviewboard.kde.org/ instead?

On Sun, Jan 13, 2013 at 9:09 PM, heena <hena18@rocketmail.com> wrote:
> https://bugs.kde.org/show_bug.cgi?id=304094
>
> --- Comment #15 from heena <hena18@rocketmail.com> ---
> Created attachment 76439 [details]
>   --> https://bugs.kde.org/attachment.cgi?id=76439&action=edit
> tried to set the autoscroll property
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
> _______________________________________________
> Kde-telepathy-bugs mailing list
> Kde-telepathy-bugs@kde.org
> https://mail.kde.org/mailman/listinfo/kde-telepathy-bugs
Comment 17 David Edmundson 2013-01-13 16:06:23 UTC
Before trying to do that, please be sure that things compile. That code attached will not.

I would recommend you spend some time getting used to building various applications from source, and going through some C++ tutorials for a while.
Comment 18 David Edmundson 2013-01-22 13:19:52 UTC
Git commit 5e84289ecd5a2433e75d8ed85c99188564c6796c by David Edmundson.
Committed on 22/01/2013 at 14:11.
Pushed by davidedmundson into branch 'master'.

Scroll when dragging contacts

As we override the drag+drop of the contact list the default scrolling in drag move event was not called.
This patch fixes that
Reviewed-by: Martin Klapetek

M  +1    -0    contact-list-widget.cpp

http://commits.kde.org/telepathy-contact-list/5e84289ecd5a2433e75d8ed85c99188564c6796c