Scroll when dragging contacts

As we override the drag+drop of the contact list the default scrolling in drag move event was not called.
This patch fixes that

BUG: 304094
Reviewed-by: Martin Klapetek